feat: add create bookmark logic

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -67,6 +67,11 @@ textarea {
   &:active {
     background-color: $primary;
   }
+  &:disabled {
+    background-color: gray;
+    color: white;
+    cursor: not-allowed;
+  }
 }
 
 .input-group {
